internal/xds/translator/testdata/out/xds-ir/jsonpatch.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  responseHeadersToAdd:
  - append: false
    header:
      key: x-request-id
      value: '%REQ(X-REQUEST-ID)%'
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    rateLimits:
    - actions:
      - remoteAddress: {}
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route
